# livetalking

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements-coqui-tts.txt  requirements-qwen-tts.txt  requirements.txt  start.ps1  start_nvidia_gpu.bat
configs/: app.example.yaml  app.yaml
data/: README.md
docs/: PORTABLE_PACKAGE.md  PROJECT_STRUCTURE.md
livetalking/: __init__.py  app.py
livetalking/avatar/: __init__.py  wav2lip_asr.py  wav2lip_real.py
livetalking/config/: app_config.py
livetalking/core/: __init__.py  base_asr.py  base_real.py
livetalking/providers/: __init__.py  asr_enhancements.py  coqui_xtts_tts.py  llm_client.py  local_asr.py  local_punc.py  pyttsx3_tts.py  qwen_tts.py  sherpa_tts.py  tts_engines.py  tts_segments.py
livetalking/realtime/: __init__.py  webrtc.py
livetalking/utils/: app_logger.py  runtime_paths.py
models/: README.md
models/asr/punc_ct-transformer_zh-cn-common-vocab272727-pytorch/: README.md  model.int8.onnx
models/asr/speech_seaco_paraformer_large_asr_nat-zh-cn-16k-common-vocab8404-pytorch/: .msc  README.md  model.pt
models/avatar/wav2lip256/: wav2lip256.pth
models/tts/vits-melo-tts-zh_en/: model.onnx
scripts/: build_portable_package.ps1  download_coqui_xtts_v2_models.ps1  download_qwen_tts_models.ps1  prepare_local_assets.ps1  prepare_portable_runtime.ps1
tests/: test_coqui_xtts_config.py  test_pyttsx3_tts_config.py  test_qwen_tts_config.py  test_tts_segments.py
tools/: README.md
wav2lip/: genavatar.py
wav2lip/models/: wav2lip.py
web/: client.js  index.html  webrtcapi-asr.html
(+5 files in other folders)
